--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "29-12-2022-practice",
+  "name": "gtu-circular-api",
   "version": "1.0.0",
   "description": "",
-  "main": "src/server.js",
+  "main": "src/index.js",
   "type": "module",
   "scripts": {
     "start": "node src/index.js",
@@ -19,7 +19,6 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
-    "mongodb": "^4.13.0",
     "mongoose": "^6.8.2"
   }
 }
