gtu circular api

--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "gtu-circular-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "type": "module",
+  "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js"
